developing programs screen page

--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -78,6 +78,80 @@
       </div>
     </div>
   </section>
+  <section class="cf center w-100 ph3 ph4-m ph6-l bg-near-white black" id="">
+    <div class="mw8 center tl">
+      <div class="cf mt0 tc  pb5 pt5 mt2 mb2">
+        <div class="cf ph2-ns">
+          <div class="fl w-50 w-50-ns pb4 pl2 pl0-m pl0-l">
+            <div class="f2 fw4 navy tl"><span class="dn di-m di-l">Our</span> programs</div>
+          </div>
+          <div class="fl w-50 w-50-ns pb4 pt3 pr2 pr0-m pr0-l">
+            <div class="f4 fw6 tr dark-blue">SEE ALL <span class="dn di-m di-l">PROGRAMS</span></div>
+          </div>
+        </div>
+        <div class="fl w-100 w-third-m w-third-l pa3">
+          <article class="br3 bg-white center shadow-default">
+            <img
+              src="../../assets/images/card-img-1.jpg" class="db w-100 br3 br--top"
+              alt="Photo of a kitten looking menacing.">
+            <div class="pa0 pb3 relative">
+              <div class="dt w-100 mt1">
+                <div class="dtc">
+                  <h1 class="f3 f4-m f3-l mv0 tl fw2 navy ph4 ph3-m ph4-l pt3">Program title</h1>
+                </div>
+              </div>
+              <p class="lh-copy-l f5 fw5 avenir navy tl ph4 ph3-m ph4-l mt3 pb3 elips-text-lent">
+                If it fits, i sits burrow under covers. Destroy couch leave hair everywhere,
+                and touch water with paw then recoil in horror.
+              </p>
+              <div class="bb b--black-10"></div>
+              <a class="f4 f5-m f4-l fw6 db blue link dim pv2 mt3" href="#0"><img src="../../assets/images/enroll-text.jpg" class="w-25"/> </a>
+            </div>
+          </article>
+        </div>
+        <div class="fl w-100 w-third-m w-third-l pa3">
+          <article class="br3 bg-white center shadow-default">
+            <img
+              src="../../assets/images/card-img-2.jpg" class="db w-100 br3 br--top"
+              alt="Photo of a kitten looking menacing.">
+            <div class="pa0 pb3">
+              <div class="dt w-100 mt1">
+                <div class="dtc">
+                  <h1 class="f3 f4-m f3-l mv0 tl fw2 navy ph4 ph3-m ph4-l pt3">Program title</h1>
+                </div>
+              </div>
+              <p class="lh-copy-l f5 fw5 avenir navy tl ph4 ph3-m ph4-l mt3 pb3 elips-text-lent">
+                If it fits, i sits burrow under covers. Destroy couch leave hair everywhere,
+                and touch water with paw then recoil in horror.
+              </p>
+              <div class="bb b--black-10"></div>
+              <a class="f4 f5-m f4-l fw6 db blue link dim pv2 mt3" href="#0"><img src="../../assets/images/comming-soon-text.jpg" class="w-50"/></a>
+            </div>
+          </article>
+        </div>
+        <div class="fl w-100 w-third-m w-third-l pa3">
+          <article class="br3 bg-white center shadow-default">
+            <img
+              src="../../assets/images/card-img-3.jpg" class="db w-100 br3 br--top"
+              alt="Photo of a kitten looking menacing.">
+            <div class="pa0 pb3">
+              <div class="dt w-100 mt1">
+                <div class="dtc">
+                  <h1 class="f3 f4-m f3-l mv0 tl fw2 navy ph4 ph3-m ph4-l pt3">Your Program here</h1>
+                </div>
+              </div>
+              <p class="lh-copy-l f5 fw5 avenir navy tl ph4 ph3-m ph4-l mt3 pb3 elips-text-lent">
+                If it fits, i sits burrow under covers. Destroy couch leave hair everywhere,
+                and touch water with paw then recoil in horror.
+              </p>
+              <div class="bb b--black-10"></div>
+              <a class="f4 f5-m f4-l fw6 db blue link dim pv2 mt3" href="#0"><img src="../../assets/images/become-text.jpg" class="w-50"/></a>
+            </div>
+          </article>
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="cf center w-100 ph3 ph6-ns bg-white black" id="joinnow">
     <div class="mw8 center tl">
       <div class="cf mt0 mb5 tc  pb4">
@@ -88,7 +162,8 @@
           <p class="lh-copy-l black f5 fw5 avenir"> No sweat required - No pressure - No special equipment - Fun
             guaranteed - Join more than 2000 participants!</p>
         </div>
-        <a class="f5 link b dim br-pill ph4 mb2 mt3 dib white blue-dark-color pt2 pb2 lh-copy avenir pointer" @click.prevent="activeModal = 'signup'; openModal('Get started now button', 'signup')">
+        <a class="f5 link b dim br-pill ph4 mb2 mt3 dib white blue-dark-color pt2 pb2 lh-copy avenir pointer"
+           @click.prevent="activeModal = 'signup'; openModal('Get started now button', 'signup')">
           Get started now
         </a>
       </div>
@@ -220,15 +295,74 @@
   </section>
   <div class="back-to-top-btn">
     <vm-back-top :bottom="100" :duration="1000" :timing="'ease'" class="blue-dark-color">
-    <div class="top"><i class="up-arrow"></i></div>
-  </vm-back-top>
+      <div class="top"><i class="up-arrow"></i></div>
+    </vm-back-top>
   </div>
+  <section class="cf center w-100 ph3 ph4-m ph6-l bg-white black relative">
+    <div class="mw8 center tl ph0 ph3-m ph3-l">
+      <div class="cf mt0 tc  pb6 pb5-m pb5-l pt2 pt5-m pt5-l mt2 mb2">
+        <div class="fl w-100 w-50-m w-50-l pa2">
+          <div class="dtc pb2 pb0-m pb0-l">
+            <h1 class="f3 f3-m f2-l mv0 tl fw2 navy pt3 lh-copy lh-title-m lh-title-l">Would you be interested to parter with us to
+              offer a programme?</h1>
+          </div>
+          <div class="db absolute bottom-2 bottom-1-m bottom-0-l left-0 right-0 tc tl-m tl-l relative-m relative-l tl">
+            <a class="f5 fw5 link dim br-pill ph4 mb2 mt2 mt4-m mt4-l dib white blue-dark-color pt2 pb2 lh-copy avenir pointer w-90 w-auto-m w-auto-l tc">BECOME A PARTNER
+            </a>
+          </div>
+        </div>
+        <div class="fl w-100 w-50-m w-50-l pa0 pa2-m pa2-l">
+          <article class="fl w-25 w-25-m w-25-l pa2">
+            <div class="tc shadow-default br3">
+              <img src="../../assets/images/patner-1.jpg" class="br-100 w-75" title="Photo of a kitty staring at you">
+            </div>
+          </article>
+          <article class="fl w-25 w-25-m w-25-l pa2">
+            <div class="tc shadow-default br3">
+              <img src="../../assets/images/patner-2.jpg" class="br-100 w-90" title="Photo of a kitty staring at you">
+            </div>
+          </article>
+          <article class="fl w-25 w-25-m w-25-l pa2">
+            <div class="tc shadow-default br3">
+              <img src="../../assets/images/patner-3.jpg" class="br-100 w-75" title="Photo of a kitty staring at you">
+            </div>
+          </article>
+          <article class="fl w-25 w-25-m w-25-l pa2">
+            <div class="tc shadow-default br3">
+              <img src="../../assets/images/patner-4.jpg" class="br-100 w-75" title="Photo of a kitty staring at you">
+            </div>
+          </article>
+          <article class="fl w-25 w-25-m w-25-l pa2">
+            <div class="tc shadow-default br3">
+              <img src="../../assets/images/patner-1.jpg" class="br-100 w-75" title="Photo of a kitty staring at you">
+            </div>
+          </article>
+          <article class="fl w-25 w-25-m w-25-l pa2">
+            <div class="tc shadow-default br3">
+              <img src="../../assets/images/patner-2.jpg" class="br-100 w-90" title="Photo of a kitty staring at you">
+            </div>
+          </article>
+          <article class="fl w-25 w-25-m w-25-l pa2">
+            <div class="tc shadow-default br3">
+              <img src="../../assets/images/patner-3.jpg" class="br-100 w-75" title="Photo of a kitty staring at you">
+            </div>
+          </article>
+          <article class="fl w-25 w-25-m w-25-l pa2">
+            <div class="tc shadow-default br3">
+              <img src="../../assets/images/patner-4.jpg" class="br-100 w-75" title="Photo of a kitty staring at you">
+            </div>
+          </article>
+        </div>
+      </div>
+    </div>
+  </section>
   <footer class="cf w-100 pa1 pa1-m pa5-l ph6-ns bg-navy white" id="feafooter">
     <div class="dt w-100 mw8 ph3 ph4-m ph4-l tl center">
       <div class="cf">
         <div class="fl w-100 w-50-l w-50-m avenir">
           <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns white">
-            <span class="mr2">Reach us</span> <a class="f5 fw5 white no-underline white" href="mailto:activepathways@smartplayds.com">activepathways@smartplayds.com</a>
+            <span class="mr2">Reach us</span> <a class="f5 fw5 white no-underline white"
+                                                 href="mailto:activepathways@smartplayds.com">activepathways@smartplayds.com</a>
           </h3>
           <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns white mt4-ns">
             Join our community on <a href="https://www.facebook.com/getwalkers/"
