--- a/service-web/src/views/LandingPage/landing-page.css
+++ b/service-web/src/views/LandingPage/landing-page.css
@@ -90,6 +90,15 @@
   content: '';
   margin-left: 13px;
 }
+.elips-text-lent {
+  height: 50px;
+  text-overflow: ellipsis;
+  /*display: -webkit-box;*/
+  /*-webkit-box-orient: vertical;*/
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+}
+
 @media screen and (max-width: 27em) {
   .read-more:after {
     display: none;
