linking the route for programs catalogue

--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -85,9 +85,9 @@
           <div class="fl w-50 w-50-ns pb4 pl2 pl0-m pl0-l">
             <div class="f2 fw4 navy tl"><span class="dn di-m di-l">Our</span> programs</div>
           </div>
-          <div class="fl w-50 w-50-ns pb4 pt3 pr2 pr0-m pr0-l">
-            <div class="f4 fw6 tr dark-blue">SEE ALL <span class="dn di-m di-l">PROGRAMS</span></div>
-          </div>
+          <router-link tag="div" :to="{name:'programs-catalogue'}" @click="" class="fl w-50 w-50-ns pb4 pt3 pr2 pr0-m pr0-l">
+            <div  class="f4 fw6 tr dark-blue">SEE ALL <span class="dn di-m di-l">PROGRAMS</span></div>
+          </router-link>
         </div>
         <div class="fl w-100 w-third-m w-third-l pa3">
           <article class="br3 bg-white center shadow-default">
