added routing to program page

--- a/service-web/src/views/ProgramsCatalogue/programs-catalogue.html
+++ b/service-web/src/views/ProgramsCatalogue/programs-catalogue.html
@@ -87,7 +87,7 @@
             <img
               src="../../assets/images/card-img-2.jpg" class="db w-100 br3 br--top"
               alt="Photo of a kitten looking menacing.">
-            <router-linkl class="pa0 pb3">
+            <router-link class="pa0 pb3">
               <div class="dt w-100 mt1">
                 <div class="dtc">
                   <h1 class="f3 f4-m f3-l mv0 tl fw2 navy ph4 ph3-m ph4-l pt3">Program title</h1>
