--- a/service-web/src/views/ProgramsCatalogue/programs-catalogue.html
+++ b/service-web/src/views/ProgramsCatalogue/programs-catalogue.html
@@ -87,7 +87,7 @@
             <img
               src="../../assets/images/card-img-2.jpg" class="db w-100 br3 br--top"
               alt="Photo of a kitten looking menacing.">
-            <router-link class="pa0 pb3">
+            <div class="pa0 pb3">
               <div class="dt w-100 mt1">
                 <div class="dtc">
                   <h1 class="f3 f4-m f3-l mv0 tl fw2 navy ph4 ph3-m ph4-l pt3">Program title</h1>
@@ -97,10 +97,10 @@
                 If it fits, i sits burrow under covers. Destroy couch leave hair everywhere,
                 and touch water with paw then recoil in horror.
               </p>
-              <router-link tag="div" :to="{name: 'program-page'}" class="bb b--black-10">
-                <a class="f4 f5-m f4-l fw6 db blue link dim pv2 mt3" href="#0"><img
-                  src="../../assets/images/enroll-text.jpg" class="w-25"/></a>
-              </router-link>
+              <div class="bb b--black-10"></div>
+              <router-link tag="div" :to="{name:'program-page'}" class="f4 f5-m f4-l fw6 db blue link dim pv2 mt3"><img
+                src="../../assets/images/enroll-text.jpg" class="w-25"/></router-link>
+            </div>
           </article>
         </div>
         <div class="fl w-100 w-third-m w-third-l pa3">
