developing program page html vue component

--- a/service-web/src/views/ProgramPage/programPage.html
+++ b/service-web/src/views/ProgramPage/programPage.html
@@ -1,17 +1,144 @@
-<div class="wrapper bg-navy">
+<div class="wrapper bg-navy back-white">
   <ProgramHeader></ProgramHeader>
-  <section class="hero-component">
-    <div id="pane-what-is-npm" class="pane bg-contain bg-top"
+  <section class="hero-component relative">
+    <div id="pane-what-is-npm" class="pane bg-contain bg-top background-img"
          style="'background-image':`url(${require(../../assets/images/walk.jpg)})`">
-      <div class="container pv6">
+      <div class="container pv5 ph3 ph3-m ph3-l pb5">
         <div class="mw8 center">
-          <div class="w-40-ns w-90 pa2 white tl">
-            <h2 class="f1 fw6 mt0">Program title</h2>
-            <p class="lh-copy">Use npm to install, share, and distribute code; manage dependencies in your projects; and
-              share &amp; receive feedback with others.</p>
+          <div class="cf db">
+            <div class="fl w-50-m w-60-l w-100 pa2 white  tl">
+              <h2 class="f1 fw4 mt0">Program title</h2>
+              <p class="lh-copy f4 fw4">Use npm to install, share, and distribute code; manage dependencies in your
+                projects; and
+                share &amp; receive feedback with others.</p>
+              <div class="start-box db">
+                <span class="f4 fw4"><strong class="f3 fw6">112</strong> people enrolled</span>
+                <span class="f4 fw4"><strong class="f3 fw6">14</strong> reviews</span>
+                <span class="ml0 ml4-m ml4-l db dib-m dib-l v-mid mt3 mt0-m mt0-l"><img src="../../assets/images/active-star.png" class="mr1 w2"/><img
+                  src="../../assets/images/unactive-start.png" class="mr2 w2"/><img
+                  src="../../assets/images/unactive-start.png" class="mr2 w2"/><img
+                  src="../../assets/images/unactive-start.png" class="mr2 w2"/></span>
+              </div>
+            </div>
+            <div class="fl w-50-m w-40-l w-100 center relative dn db-m db-l">
+              <div class="bg-white br3 pa3 tl absolute top-0 right-0 z-3">
+                <h3 class="f3 fw6 mt0">Enroll to the Program <img src="../../assets/images/patner-4.jpg"
+                                                                  class="w3 v-mid ml4"/></h3>
+                <p class="lh-copy f4 light-grey-blue">Use npm to install, share, and distribute code; manage
+                  dependencies in your projects; and
+                  share &amp; receive feedback with others.</p>
+                <a
+                  class="f4 fw4 link dim br-pill ph4 mb4 mt4 dib white blue-dark-color pt2 pb2 lh-copy avenir pointer w-100 tc">ENROLL
+                </a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
+  <div class="container pv3 pv5-m pv5-l ph3 ph3-m ph3-l pb5">
+    <section class="mw8 center">
+      <div class="w-100 w-60-m w-60-l ">
+        <h2 class="f2 fw4 white o-50 tl grey-black">Overview</h2>
+        <article class="pt3-ns pb2-ns avenir">
+          <h3 class="f5 f3-m f3-l fw6 fw4-m fw4-l white o-50 tl grey-black">GOALS</h3>
+          <p class="tl white f4 f5-m f5-l fw4 o-90 lh-copy light-grey-blue">
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+            tempor invidunt ut labore et dolore magna aliquyam erat,
+          </p>
+        </article>
+        <article class="pt2-ns pb2-ns avenir">
+          <h3 class="f5 f3-m f3-l fw6 fw4-m fw4-l white o-50 tl grey-black">WHAT YOU WILL DO</h3>
+          <p class="tl white f4 f5-m f5-l fw4 o-90 lh-copy light-grey-blue">
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+            tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
+            vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+            no sea takimata sanctus est Lorem ipsum dolor sit amet.
+          </p>
+        </article>
+        <article class="pt2-ns pb2-ns avenir">
+          <h3 class="f5 f3-m f3-l fw6 fw4-m fw4-l white o-50 tl grey-black">WHAT YOU WILL DO</h3>
+          <p class="tl white f4 f5-m f5-l fw4 o-90 lh-copy light-grey-blue">
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+            tempor invidunt ut labore et dolore magna aliquyam erat,</p>
+        </article>
+        <article class="pt2-ns pb2-ns avenir">
+          <h3 class="f5 f3-m f3-l fw6 fw4-m fw4-l white o-50 tl grey-black">RECOMMENDED TO</h3>
+          <p class="tl white f4 f5-m f5-l fw4 o-90 lh-copy light-grey-blue">
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr,</p>
+        </article>
+
+        <article class="pt4-ns pb2-ns avenir">
+          <h3 class="f5 f3-m f3-l fw6 fw4-m fw4-l white o-50 tl grey-black">OFFERED BY</h3>
+          <img src="../../assets/images/patner-4.jpg" class="w3 mr2 fl"/>
+          <p class="tl white f4 f5-m f5-l fw4 o-90 lh-copy light-grey-blue">
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, consetetur sadipscing elitr</p>
+        </article>
+        <article class="pt5-ns pb2-ns avenir">
+          <h2 class="f2 fw4 white o-50 tl grey-black">Reviews</h2>
+          <div class="cf db">
+          <h3 class="f5 f4-m f4-l fw6 fw4-m fw4-l white o-50 tl grey-black w-50 w-50-m w-50-l fl ma0 ">USERNAME</h3>
+          <p class="white f4-m f4-l fw6 fw4-m fw4-l o-40 lh-title i-l grey-black tr ma0 w-50 w-50-m w-50-l fl">Date</p>
+          </div>
+          <p class="tl white f4 f5-m f5-l fw4 o-90 lh-copy light-grey-blue db">
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+            tempor invidunt ut labore et dolore magna aliquyam erat,</p>
+        </article>
+        <article class="pt2-ns pb2-ns avenir">
+          <div class="cf db">
+            <h3 class="f5 f4-m f4-l fw6 fw4-m fw4-l white o-50 tl grey-black w-50 w-50-m w-50-l fl ma0 ">USERNAME</h3>
+            <p class="white f4-m f4-l fw6 fw4-m fw4-l o-40 lh-title i-l grey-black tr ma0 w-50 w-50-m w-50-l fl">Date</p>
+          </div>
+          <p class="tl white f4 f5-m f5-l fw4 o-90 lh-copy light-grey-blue">
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+            tempor invidunt ut labore et dolore magna aliquyam erat,</p>
+        </article>
+        <article class="pt2-ns pb2-ns avenir">
+          <div class="cf db">
+            <h3 class="f5 f4-m f4-l fw6 fw4-m fw4-l white o-50 tl grey-black w-50 w-50-m w-50-l fl ma0 ">USERNAME</h3>
+            <p class="white f4-m f4-l fw6 fw4-m fw4-l o-40 lh-title i-l grey-black tr ma0 w-50 w-50-m w-50-l fl">Date</p>
+          </div>
+          <p class="tl white f4 f5-m f5-l fw4 o-90 lh-copy light-grey-blue">
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+            tempor invidunt ut labore et dolore magna aliquyam erat,</p>
+        </article>
+      </div>
+    </section>
+  </div>
+  <footer class="cf w-100 pa1 pa1-m pa5-l ph6-ns bg-navy white" id="feafooter">
+    <div class="dt w-100 mw8 ph3 ph4-m ph4-l tl center">
+      <div class="cf">
+        <div class="fl w-100 w-50-l w-50-m avenir">
+          <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns white">
+            <span class="mr2">Reach us</span> <a class="f5 fw5 white no-underline white"
+                                                 href="mailto:activepathways@smartplayds.com">activepathways@smartplayds.com</a>
+          </h3>
+          <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns white mt4-ns">
+            Join our community on <a href="https://www.facebook.com/getwalkers/"
+                                     class=" white underline" target="_blank">Facebook</a>
+          </h3>
+          <div class="pt4">
+            <a href="/terms#privacy" target="_blank" class="f6 fw5 white mt1">Privacy Policy</a>
+          </div>
+          <div class="pt4">
+            <a href="/terms#terms" target="_blank" class="f6 fw5 white mt1">Terms Of Use</a>
+          </div>
+        </div>
+        <div class="fl w-100 w-50-l w-50-m">
+          <h3 class="f5 fw6 w-90-l ma0-ns pa0-ns white">Active Pathways is an initiative of:
+            SMARTplayds Limited</h3>
+          <p class="f6 fw5 white mt2">Collaborate Works - Steward House <span class="underline">14 Commercial Way</span>
+          </p>
+          <p class="f6 fw5 white mt1">Woking GU21 6ET</p>
+          <p class="f6 fw5 white mt1">+44 - 203 695 2189</p>
+          <p class="f6 fw5 white mt1">Registered in England and Wales 9462175</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <div class="dn-m dn-l db fixed bottom-0 left-0 right-0 z-4 bg-white shadow-default">
+    <a class="f4 fw4 link dim br-pill ph4 mb2 mt2 dib white blue-dark-color pt2 pb2 lh-copy avenir pointer w-90 tc">ENROLL
+    </a>
+  </div>
 </div>
