--- a/service-web/src/views/LandingPage/landing-page.css
+++ b/service-web/src/views/LandingPage/landing-page.css
@@ -138,3 +138,10 @@
     left: 20px;
   }
 }
+
+.mask-text-gradient {
+  background: -webkit-linear-gradient(left, rgba(131,221,229,1) 20%,rgba(0,163,211,1) 96%);
+  background: linear-gradient(to right, rgba(131,221,229,1) 20%,rgba(0,163,211,1) 96%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
