--- a/service-web/src/views/ChallengePage/challenge-page.html
+++ b/service-web/src/views/ChallengePage/challenge-page.html
@@ -53,7 +53,15 @@
               <div>
               </div>
             </article>
-            <div v-if="videoId">
+            <div v-if="youtubeUrl">
+            <iframe id="existing-iframe-example"
+                    width="640" height="360"
+                    :src= youtubeUrl
+                    frameborder="0"
+                    style="border: solid 4px #37474F"
+            ></iframe>
+            </div>
+            <!--<div v-if="videoId">
               <youtube :video-id="videoId"></youtube>
             </div>
             <div v-if="playerOptions.sources[0].src">
@@ -63,7 +71,7 @@
                             :playsinline="true"
                             customEventName="customstatechangedeventname">
               </video-player>
-            </div>
+            </div>-->
           </div>
         </div>
       </div>
