--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -78,18 +78,18 @@
       </div>
     </div>
   </section>
-  <section class="cf center w-100 ph3 ph4-m ph6-l bg-near-white black" id="">
+  <section class="cf center w-100 ph2 ph4-m ph6-l bg-near-white black" id="">
     <div class="mw8 center tl">
-      <div class="cf mt0 tc  pb5 pt5 mt2 mb2">
+      <div class="cf mt0 tc  pv3 pv5-ns mv2">
         <div class="cf ph2-ns">
-          <div class="fl w-50 w-50-ns pb4 pl2 pl0-m pl0-l">
-            <div class="f2 fw4 navy tl"><span class="dn di-m di-l">Our</span> programs</div>
+          <div class="fl w-50 w-50-ns pb1 pb4-ns pl3 pl2-ns">
+            <div class="f5 f3-m f2-l fw6 fw4-ns navy tl "><span class="dn di-m di-l">Our</span> <span class="ttu ttl-ns">programs</span></div>
           </div>
-          <router-link tag="div" :to="{name:'programs-catalogue'}" @click="" class="fl w-50 w-50-ns pb4 pt3 pr2 pr0-m pr0-l">
-            <div  class="f3 fw6 tr pointer mask-text-gradient">SEE ALL <span class="dn di-m di-l">PROGRAMS</span></div>
+          <router-link tag="div" :to="{name:'programs-catalogue'}" @click="" class="fl w-50 w-50-ns pb1 pb4-ns pt0 pt3-ns pr2 pr2-ns">
+            <div  class="f5 f4-ns fw6 tr pointer mask-text-gradient pr2">SEE ALL <span class="dn di-m di-l">PROGRAMS</span></div>
           </router-link>
         </div>
-        <div class="fl w-100 w-third-m w-third-l pa3">
+        <div class="fl w-100 w-50-m w-third-l pa3">
           <article class="br3 bg-white center shadow-default">
             <img
               src="../../assets/images/card-img-1.jpg" class="db w-100 br3 br--top"
@@ -97,10 +97,10 @@
             <div class="pa0 pb3 relative">
               <div class="dt w-100 mt1">
                 <div class="dtc">
-                  <h1 class="f3 f4-m f3-l mv0 tl fw2 navy ph4 ph3-m ph4-l pt3">Program title</h1>
+                  <h1 class="f3 f4-m f3-l mv0 tl fw2 navy ph3 pt3">Program title</h1>
                 </div>
               </div>
-              <p class="lh-copy-l f5 fw5 avenir navy tl ph4 ph3-m ph4-l mt3 pb3 elips-text-lent">
+              <p class="lh-copy-l f5 fw5 avenir navy tl ph3 mt3 pb3 elips-text-lent">
                 If it fits, i sits burrow under covers. Destroy couch leave hair everywhere,
                 and touch water with paw then recoil in horror.
               </p>
@@ -109,7 +109,7 @@
             </div>
           </article>
         </div>
-        <div class="fl w-100 w-third-m w-third-l pa3">
+        <div class="fl w-100 w-50-m w-third-l pa3">
           <article class="br3 bg-white center shadow-default">
             <img
               src="../../assets/images/card-img-2.jpg" class="db w-100 br3 br--top"
@@ -117,10 +117,10 @@
             <div class="pa0 pb3">
               <div class="dt w-100 mt1">
                 <div class="dtc">
-                  <h1 class="f3 f4-m f3-l mv0 tl fw2 navy ph4 ph3-m ph4-l pt3">Program title</h1>
+                  <h1 class="f3 f4-m f3-l mv0 tl fw2 navy ph3 pt3">Program title</h1>
                 </div>
               </div>
-              <p class="lh-copy-l f5 fw5 avenir navy tl ph4 ph3-m ph4-l mt3 pb3 elips-text-lent">
+              <p class="lh-copy-l f5 fw5 avenir navy tl ph3 mt3 pb3 elips-text-lent">
                 If it fits, i sits burrow under covers. Destroy couch leave hair everywhere,
                 and touch water with paw then recoil in horror.
               </p>
@@ -129,7 +129,7 @@
             </div>
           </article>
         </div>
-        <div class="fl w-100 w-third-m w-third-l pa3">
+        <div class="fl w-100 w-50-m w-third-l pa3">
           <article class="br3 bg-white center shadow-default">
             <img
               src="../../assets/images/card-img-3.jpg" class="db w-100 br3 br--top"
@@ -137,10 +137,10 @@
             <div class="pa0 pb3">
               <div class="dt w-100 mt1">
                 <div class="dtc">
-                  <h1 class="f3 f4-m f3-l mv0 tl fw2 navy ph4 ph3-m ph4-l pt3">Your Program here</h1>
+                  <h1 class="f3 f4-m f3-l mv0 tl fw2 navy ph3 pt3">Your Program here</h1>
                 </div>
               </div>
-              <p class="lh-copy-l f5 fw5 avenir navy tl ph4 ph3-m ph4-l mt3 pb3 elips-text-lent">
+              <p class="lh-copy-l f5 fw5 avenir navy tl ph3 mt3 pb3 elips-text-lent">
                 If it fits, i sits burrow under covers. Destroy couch leave hair everywhere,
                 and touch water with paw then recoil in horror.
               </p>
