--- a/service-web/src/views/ProgramsCatalogue/programs-catalogue.html
+++ b/service-web/src/views/ProgramsCatalogue/programs-catalogue.html
@@ -1,9 +1,9 @@
 <div class="wrapper">
   <ProgramHeader></ProgramHeader>
-  <section class="cf center w-100 ph3 ph4-m ph6-l bg-navy black" id="">
+  <section class="cf center w-100 ph2 ph4-m ph6-l bg-navy black" id="">
     <div class="mw8 center tl">
-      <div class="cf mt0 tc  pb5 pt5 mt2 mb2">
-        <div class="fl w-100 w-third-m w-third-l pa3">
+      <div class="cf mt0 tc  pv3 pv5-ns mv2">
+        <div class="fl w-100 w-50-m w-third-l pa3">
           <article class="br3 bg-white center shadow-default">
             <img
               src="../../assets/images/card-img-1.jpg" class="db w-100 br3 br--top"
@@ -11,10 +11,10 @@
             <div class="pa0 pb3">
               <div class="dt w-100 mt1">
                 <div class="dtc">
-                  <h1 class="f3 f4-m f3-l mv0 tl fw2 navy ph4 ph3-m ph4-l pt3">Program title</h1>
+                  <h1 class="f3 f4-m f3-l mv0 tl fw2 navy ph3 pt3">Program title</h1>
                 </div>
               </div>
-              <p class="lh-copy-l f5 fw5 avenir navy tl ph4 ph3-m ph4-l mt3 pb3 elips-text-lent">
+              <p class="lh-copy-l f5 fw5 avenir navy tl ph3 mt3 pb3 elips-text-lent">
                 If it fits, i sits burrow under covers. Destroy couch leave hair everywhere,
                 and touch water with paw then recoil in horror.
               </p>
@@ -24,18 +24,18 @@
             </div>
           </article>
         </div>
-        <div class="fl w-100 w-third-m w-third-l pa3">
+        <div class="fl w-100 w-50-m w-third-l pa3">
           <article class="br3 bg-white center shadow-default">
             <img
-              src="../../assets/images/card-img-2.jpg" class="db w-100 br3 br--top"
+              src="../../assets/images/card-img-1.jpg" class="db w-100 br3 br--top"
               alt="Photo of a kitten looking menacing.">
-            <div class="pa0 pb3">
+            <div class="pa0 pb3 relative">
               <div class="dt w-100 mt1">
                 <div class="dtc">
-                  <h1 class="f3 f4-m f3-l mv0 tl fw2 navy ph4 ph3-m ph4-l pt3">Program title</h1>
+                  <h1 class="f3 f4-m f3-l mv0 tl fw2 navy ph3 pt3">Program title</h1>
                 </div>
               </div>
-              <p class="lh-copy-l f5 fw5 avenir navy tl ph4 ph3-m ph4-l mt3 pb3 elips-text-lent">
+              <p class="lh-copy-l f5 fw5 avenir navy tl ph3 mt3 pb3 elips-text-lent">
                 If it fits, i sits burrow under covers. Destroy couch leave hair everywhere,
                 and touch water with paw then recoil in horror.
               </p>
@@ -45,97 +45,87 @@
             </div>
           </article>
         </div>
-        <div class="fl w-100 w-third-m w-third-l pa3">
+        <div class="fl w-100 w-50-m w-third-l pa3">
           <article class="br3 bg-white center shadow-default">
             <img
-              src="../../assets/images/card-img-3.jpg" class="db w-100 br3 br--top"
-              alt="Photo of a kitten looking menacing.">
-            <div class="pa0 pb3">
-              <div class="dt w-100 mt1">
-                <div class="dtc">
-                  <h1 class="f3 f4-m f3-l mv0 tl fw2 navy ph4 ph3-m ph4-l pt3">Your Program here</h1>
-                </div>
-              </div>
-              <p class="lh-copy-l f5 fw5 avenir navy tl ph4 ph3-m ph4-l mt3 pb3 elips-text-lent">
-                If it fits, i sits burrow under covers. Destroy couch leave hair everywhere,
-                and touch water with paw then recoil in horror.
-              </p>
-              <div class="bb b--black-10"></div>
-              <a class="f4 f5-m f4-l fw6 db blue link dim pv2 mt3" href="#0"><img
-                src="../../assets/images/enroll-text.jpg" class="w-25"/></a>
-            </div>
-          </article>
-        </div>
-        <div class="fl w-100 w-third-m w-third-l pa3">
-          <article class="br3 bg-white center shadow-default">
-            <img
-              src="../../assets/images/card-img-3.jpg" class="db w-100 br3 br--top"
+              src="../../assets/images/card-img-1.jpg" class="db w-100 br3 br--top"
               alt="Photo of a kitten looking menacing.">
             <div class="pa0 pb3 relative">
-              <div class="partner-card-name absolute top--2 left-0 right-0 ml-auto mr-auto z-3 w-90">
-                <div class="partner-logo-description bg-white box-shadow pa1 br2 clearfix tl f6 fw4 navy"><img
-                  src="../../assets/images/patner-4.jpg" class="w2 mr2 dib v-mid"/>Name of the partner
-                </div>
-              </div>
               <div class="dt w-100 mt1">
                 <div class="dtc">
-                  <h1 class="f3 f4-m f3-l mv0 tl fw2 navy ph4 ph3-m ph4-l pt3">Your Program here</h1>
+                  <h1 class="f3 f4-m f3-l mv0 tl fw2 navy ph3 pt3">Program title</h1>
                 </div>
               </div>
-              <p class="lh-copy-l f5 fw5 avenir navy tl ph4 ph3-m ph4-l mt3 pb3 elips-text-lent">
+              <p class="lh-copy-l f5 fw5 avenir navy tl ph3 mt3 pb3 elips-text-lent">
                 If it fits, i sits burrow under covers. Destroy couch leave hair everywhere,
                 and touch water with paw then recoil in horror.
               </p>
               <div class="bb b--black-10"></div>
               <a class="f4 f5-m f4-l fw6 db blue link dim pv2 mt3" href="#0"><img
-                src="../../assets/images/enroll-text.jpg" class="w-25"/></a>
+                src="../../assets/images/enroll-text.jpg" class="w-25"/> </a>
             </div>
           </article>
         </div>
-        <div class="fl w-100 w-third-m w-third-l pa3">
+        <div class="fl w-100 w-50-m w-third-l pa3">
           <article class="br3 bg-white center shadow-default">
             <img
-              src="../../assets/images/card-img-3.jpg" class="db w-100 br3 br--top"
-              alt="Photo of a kitten looking menacing.">
-            <div class="pa0 pb3">
-              <div class="dt w-100 mt1">
-                <div class="dtc">
-                  <h1 class="f3 f4-m f3-l mv0 tl fw2 navy ph4 ph3-m ph4-l pt3">Your Program here</h1>
-                </div>
-              </div>
-              <p class="lh-copy-l f5 fw5 avenir navy tl ph4 ph3-m ph4-l mt3 pb3 elips-text-lent">
-                If it fits, i sits burrow under covers. Destroy couch leave hair everywhere,
-                and touch water with paw then recoil in horror.
-              </p>
-              <div class="bb b--black-10"></div>
-              <a class="f4 f5-m f4-l fw6 db blue link dim pv2 mt3" href="#0"><img
-                src="../../assets/images/enroll-text.jpg" class="w-25"/></a>
-            </div>
-          </article>
-        </div>
-        <div class="fl w-100 w-third-m w-third-l pa3">
-          <article class="br3 bg-white center shadow-default">
-            <img
-              src="../../assets/images/card-img-3.jpg" class="db w-100 br3 br--top"
+              src="../../assets/images/card-img-1.jpg" class="db w-100 br3 br--top"
               alt="Photo of a kitten looking menacing.">
             <div class="pa0 pb3 relative">
-              <div class="partner-card-name absolute top--2 left-0 right-0 ml-auto mr-auto z-3 w-90">
-                <div class="partner-logo-description bg-white box-shadow pa1 br2 clearfix tl f6 fw4 navy"><img
-                  src="../../assets/images/patner-4.jpg" class="w2 mr2 dib v-mid"/>Name of the partner
-                </div>
-              </div>
               <div class="dt w-100 mt1">
                 <div class="dtc">
-                  <h1 class="f3 f4-m f3-l mv0 tl fw2 navy ph4 ph3-m ph4-l pt3">Your Program here</h1>
+                  <h1 class="f3 f4-m f3-l mv0 tl fw2 navy ph3 pt3">Program title</h1>
                 </div>
               </div>
-              <p class="lh-copy-l f5 fw5 avenir navy tl ph4 ph3-m ph4-l mt3 pb3 elips-text-lent">
+              <p class="lh-copy-l f5 fw5 avenir navy tl ph3 mt3 pb3 elips-text-lent">
                 If it fits, i sits burrow under covers. Destroy couch leave hair everywhere,
                 and touch water with paw then recoil in horror.
               </p>
               <div class="bb b--black-10"></div>
               <a class="f4 f5-m f4-l fw6 db blue link dim pv2 mt3" href="#0"><img
-                src="../../assets/images/enroll-text.jpg" class="w-25"/></a>
+                src="../../assets/images/enroll-text.jpg" class="w-25"/> </a>
+            </div>
+          </article>
+        </div>
+        <div class="fl w-100 w-50-m w-third-l pa3">
+          <article class="br3 bg-white center shadow-default">
+            <img
+              src="../../assets/images/card-img-1.jpg" class="db w-100 br3 br--top"
+              alt="Photo of a kitten looking menacing.">
+            <div class="pa0 pb3 relative">
+              <div class="dt w-100 mt1">
+                <div class="dtc">
+                  <h1 class="f3 f4-m f3-l mv0 tl fw2 navy ph3 pt3">Program title</h1>
+                </div>
+              </div>
+              <p class="lh-copy-l f5 fw5 avenir navy tl ph3 mt3 pb3 elips-text-lent">
+                If it fits, i sits burrow under covers. Destroy couch leave hair everywhere,
+                and touch water with paw then recoil in horror.
+              </p>
+              <div class="bb b--black-10"></div>
+              <a class="f4 f5-m f4-l fw6 db blue link dim pv2 mt3" href="#0"><img
+                src="../../assets/images/enroll-text.jpg" class="w-25"/> </a>
+            </div>
+          </article>
+        </div>
+        <div class="fl w-100 w-50-m w-third-l pa3">
+          <article class="br3 bg-white center shadow-default">
+            <img
+              src="../../assets/images/card-img-1.jpg" class="db w-100 br3 br--top"
+              alt="Photo of a kitten looking menacing.">
+            <div class="pa0 pb3 relative">
+              <div class="dt w-100 mt1">
+                <div class="dtc">
+                  <h1 class="f3 f4-m f3-l mv0 tl fw2 navy ph3 pt3">Program title</h1>
+                </div>
+              </div>
+              <p class="lh-copy-l f5 fw5 avenir navy tl ph3 mt3 pb3 elips-text-lent">
+                If it fits, i sits burrow under covers. Destroy couch leave hair everywhere,
+                and touch water with paw then recoil in horror.
+              </p>
+              <div class="bb b--black-10"></div>
+              <a class="f4 f5-m f4-l fw6 db blue link dim pv2 mt3" href="#0"><img
+                src="../../assets/images/enroll-text.jpg" class="w-25"/> </a>
             </div>
           </article>
         </div>
