--- a/service-web/src/components/header/header.html
+++ b/service-web/src/components/header/header.html
@@ -12,9 +12,9 @@
             <a href=""
                class="f4 f4-m f3-ns b dib-ns pv2 ml3-m ml4-ns mt1-m " v-scroll-to="'#features'">How it works
             </a>
-            <a href="" v-scroll-to="'#saying'" class="f4 f4-m f3-ns b dib-ns pv2 ml3-m ml4-ns pointer">
-              Testimonials
-            </a>
+            <router-link tag="a" :to="{name:'program-page'}" class="f4 f4-m f3-ns b dib-ns pv2 ml3-m ml4-ns pointer">
+              Programs
+            </router-link>
             <a class="f4 f4-m f3-ns b dib-ns pv2 ml3-m ml4-ns pointer"
                @click.prevent="activeModal = 'signup'; openModal('header', 'signup')">
               Sign up
@@ -42,10 +42,9 @@
             <a href="" @click.stop.prevent="toggle"
                class="w-100 f4 fw5 db white no-underline tl pb3" v-scroll-to="'#features'">How it works
             </a>
-            <a href="" v-scroll-to="'#saying'" @click.stop.prevent="toggle"
-               class="w-100 f4 fw5 db pb3 white no-underline tl">
-              Testimonials
-            </a>
+            <router-link tag="div" :to="{name:'program-page'}" class="w-100 f4 fw5 db white no-underline tl pb3 pointer">
+              Programs
+            </router-link>
             <a class="w-100 f4 fw5 db white no-underline pb3 tl"
                @click.prevent="activeModal = 'signup'; openModal(); toggle()">
               Sign up
